# aiinfra

./: .gitignore  README.md
notebook/: 6_10_tokenizer.ipynb  7_1_gpt2.ipynb
notebook/used/: ep1.ipynb  ep3.ipynb  ep4.ipynb  ep5.ipynb  ep6.ipynb  ep7.ipynb  (+3 more)
temp/: test_1.py
tinylm-infra/: .gitignore  README.md  pyproject.toml  requirements.txt
tinylm-infra/configs/: train_atuodl.yaml  train_debug.yaml  train_gpt2.yaml
tinylm-infra/docs/: usage.md
tinylm-infra/note/karpathy/: TinyLM_GPT2复现与训练_完整学习笔记.md  TinyLM_代码功能_训练参数与完整流程.md
tinylm-infra/scripts/: generate.sh  plot.sh  prepare_hellaswag.sh  prepare_tinystories.sh  train_gpt.sh
tinylm-infra/tests/: test_dataloader.py  test_gpt2_model.py  test_tokenizer_basic.py  test_tokenizer_regex.py
tinylm-infra/tests/integration/: test_pretrained.py
tinylm-infra/tests/test_tokenizer/: test_tokenizer_basic.py  test_tokenizer_gpt4.py
tinylm-infra/tests/unit/: test_checkpoint.py  test_gpt2_model.py
tinylm-infra/tests/unit/config/: test_config.py
tinylm-infra/tiny_lm/config/: __init__.py  loader.py  schema.py  validation.py
tinylm-infra/tiny_lm/data/: tinystories.py
tinylm-infra/tiny_lm/dataloader/: dataloader.py  test.py
tinylm-infra/tiny_lm/eval/: hellaswag.py  prepare_hellaswag.py
tinylm-infra/tiny_lm/generation/: generate.py
tinylm-infra/tiny_lm/model/: gpt2.py
tinylm-infra/tiny_lm/tokenizer/: base.py  basic.py  gpt4.py  hayatol.model  hayatol.vocab  regex.py
tinylm-infra/tiny_lm/train/: checkpoint.py  train_gpt2.py
tinylm-infra/tiny_lm/utils/: plot.py
tpu-mlir-deploy-lab/: README.md
(+6 files in other folders)
